--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
+Public class calc {
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+Public static void main(string[] args)
+{
+ Int num1=30;
+Int num2=20;
+Int addition=num1+num2;
+Int subtraction =num1-num2;
+Int multiplication=num1*num2;
+Int division=num1/num2;
+System.out.println(addition);
+System.out.println(subtraction);
+System.out.println(multiplication);
+System.out.println(division);
+}
+} 
